---
source: indexes.sqltest
expression: |-
  SELECT id, order_date, total_amount
      FROM orders
      WHERE customer_id = 100
      ORDER BY order_date;
info:
  statement_type: SELECT
  tables:
  - orders
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SEARCH orders USING INDEX idx_orders_customer_date (customer_id=?)
`--USE SORTER FOR ORDER BY
